kubernetes/snippets/ingress/ingress-test.yml
# kubectl create deployment web --image=quay.io/myafk/interactive:stable -- interactive ingress

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: quay.io/myafk/interactive:stable
        command: [ "interactive", "ingress" ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8085
      automountServiceAccountToken: false

---

# kubectl expose deployment web --type=ClusterIP --port=8080

apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8085
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 8080

# curl localhost/getTaskAnswer
